--- a/BoilerPlate/style.css
+++ b/BoilerPlate/style.css
@@ -3,14 +3,43 @@
 }
 
 body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /*  */
     height: 100vh;
     width: 100vw;
     overflow: hidden;
-    /*  */
     margin: 0;
+}
+
+/* Day1 - Expanding Cards */
+expanding-cards {
+    display: flex;
+    width: 80%;
+    height: inherit;
+}
+expanding-cards .card {
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 20px;
+    height: 80%;
+    color: #fff;
+    cursor: pointer;
+    flex: 0.5;
+    margin: 10px;
+    position: relative;
+    transition: flex 0.5s ease-in;
+}
+expanding-cards .card h3 {
+    font-size: 24px;
+    position: absolute;
+    bottom: 20px;
+    left: 20px;
+    margin: 0;
+    opacity: 0;
+}
+expanding-cards .card.active {
+    flex: 5;
+}
+expanding-cards .card.active h3 {
+    opacity: 1;
+    transition: opacity 0.3s ease-in 0.4s;
 }
