--- a/Day3/style.css
+++ b/Day3/style.css
@@ -1,13 +1,12 @@
-:root {
-    --progress-steps-empty: #e0e0e0;
-    --progress-steps-fill: #3498db;
-}
-
 * {
     box-sizing: border-box;
 }
 
 body {
+    margin: 0;
+}
+
+.container {
     background-color: #333;
     color: #222;
     height: 100vh;
@@ -16,7 +15,7 @@ body {
     margin: 0;
 }
 
-.container {
+.content {
     background-color: #fafafa;
     transform-origin: top left;
     transition: transform 0.5s linear;
@@ -24,26 +23,20 @@ body {
     min-height: 100vh;
     padding: 50px;
 }
-
-.container.show-nav {
+.content.show-nav {
     transform: rotate(-20deg);
 }
-
-.container.show-nav .circle {
+.content.show-nav .circle {
     transform: rotate(-70deg);
 }
-
-.container.show-nav + nav li {
+.content.show-nav + nav li {
     transform: translateX(0);
 }
 
-.circle-container {
-    position: fixed;
-    top: -100px;
-    left: -100px;
-}
-
 .circle {
+    position: fixed;
+    top: -150px;
+    left: -150px;
     background-color: #ff7979;
     height: 200px;
     width: 200px;
@@ -51,7 +44,6 @@ body {
     position: relative;
     transition: tranform 0.5s linear;
 }
-
 .circle button {
     position: absolute;
     top: 50%;
@@ -63,40 +55,34 @@ body {
     color: #fff;
     cursor: pointer;
 }
-
 .circle button:focus {
     outline: none;
 }
-
 .circle button.open {
     left: 60%;
 }
-
 .circle button.close {
     top: 60%;
     transform: rotate(90deg);
     transform-origin: top left;
 }
 
-.content img {
+article {
+    max-width: 1000px;
+    margin: -100px auto;
+}
+article img {
     max-width: 100%;
 }
-
-.content {
-    max-width: 1000px;
-    margin: 50px auto;
-}
-
-.content h1 {
+article h1 {
     margin: 0;
+    font-size: 32px;
 }
-
-.content small {
+article small {
     color: #555;
     font-style: italic;
 }
-
-.content p {
+article p {
     color: #333;
     line-height: 1.5;
 }
@@ -105,14 +91,11 @@ nav {
     position: fixed;
     bottom: 40px;
     left: 0;
-    z-index: 100;
 }
-
 nav ul {
     list-style-type: none;
     padding-left: 30px;
 }
-
 nav ul li {
     text-transform: uppercase;
     color: #fff;
@@ -120,17 +103,14 @@ nav ul li {
     transform: translateX(-100%);
     transition: transform 0.5s ease-in;
 }
-
 nav ul li i {
     font-size: 20px;
     margin-right: 10px;
 }
-
 nav ul li + li {
     margin-left: 15px;
     transform: translateX(-150%);
 }
-
 nav ul li + li + li {
     margin-left: 30px;
     transform: translateX(-200%);
