--- a/componets-style.css
+++ b/componets-style.css
@@ -10,7 +10,6 @@
 body {
     height: 100vh;
     width: 100vw;
-    overflow: hidden;
     margin: 0;
 }
 
@@ -121,4 +120,115 @@ progress-steps .button-container button:focus {
 progress-steps .button-container button:disabled {
     background-color: var(--progress-steps-empty);
     cursor: not-allowed;
+}
+
+/* Day 3 - Rotating Navigation */
+rotating-navigation {
+    display: block;
+    background-color: #333;
+    color: #222;
+    height: 100vh;
+    width: 100vw;
+    overflow-x: hidden;
+    margin: 0;
+}
+rotating-navigation .content {
+    background-color: #fafafa;
+    transform-origin: top left;
+    transition: transform 0.5s linear;
+    width: 100vw;
+    min-height: 100vh;
+    padding: 50px;
+}
+rotating-navigation .content.show-nav {
+    transform: rotate(-20deg);
+}
+rotating-navigation .content.show-nav .circle {
+    transform: rotate(-70deg);
+}
+rotating-navigation .content.show-nav + nav li {
+    transform: translateX(0);
+}
+
+rotating-navigation .content .circle {
+    position: fixed;
+    top: -150px;
+    left: -150px;
+    background-color: #ff7979;
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    position: relative;
+    transition: tranform 0.5s linear;
+}
+rotating-navigation .content .circle button {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    height: 100px;
+    background: transparent;
+    border: 0;
+    font-size: 26px;
+    color: #fff;
+    cursor: pointer;
+}
+rotating-navigation .content .circle button:focus {
+    outline: none;
+}
+rotating-navigation .content .circle button.open {
+    left: 60%;
+}
+rotating-navigation .content .circle button.close {
+    top: 60%;
+    transform: rotate(90deg);
+    transform-origin: top left;
+}
+
+rotating-navigation .content article {
+    max-width: 1000px;
+    margin: -100px auto;
+}
+rotating-navigation .content article img {
+    max-width: 100%;
+}
+rotating-navigation .content article h1 {
+    margin: 0;
+    font-size: 32px;
+}
+rotating-navigation .content article small {
+    color: #555;
+    font-style: italic;
+}
+rotating-navigation .content article p {
+    color: #333;
+    line-height: 1.5;
+}
+
+rotating-navigation nav {
+    position: fixed;
+    bottom: 40px;
+    left: 0;
+}
+rotating-navigation nav ul {
+    list-style-type: none;
+    padding-left: 30px;
+}
+rotating-navigation nav ul li {
+    text-transform: uppercase;
+    color: #fff;
+    margin: 40px 0;
+    transform: translateX(-100%);
+    transition: transform 0.5s ease-in;
+}
+rotating-navigation nav ul li i {
+    font-size: 20px;
+    margin-right: 10px;
+}
+rotating-navigation nav ul li + li {
+    margin-left: 15px;
+    transform: translateX(-150%);
+}
+rotating-navigation nav ul li + li + li {
+    margin-left: 30px;
+    transform: translateX(-200%);
 }
